--- a/public/css/gallery.scss
+++ b/public/css/gallery.scss
@@ -7,9 +7,22 @@
   padding: 25px;
   border-radius: 1.5%;
   margin-bottom: 50px;
-
-  img{
+/*
+  .btn{
+    background-color: $accent1;
     padding: 5px;
+    border-radius: 5%;
+    width: 110px;
+    margin-left: 3px;
+  }
+  .btn:hover{
+    transform: scale(1.1);
+    transition: 0.4s;
+  }
+
+  add a download button at some point
+*/
+  img{
     aspect-ratio: 1/1;
     width: 32%;
     padding: 5px;
@@ -20,7 +33,6 @@
   img:hover{
     transform: scale(1.3);
     transition: 0.4s;
-    border-radius: 5%;
   }
 }
 
