--- a/public/css/article.scss
+++ b/public/css/article.scss
@@ -1,12 +1,7 @@
 @import "../utilities/varibles";
 
 .article{
-  background-color: $primary;
-  margin-left: 20%;
-  margin-right: 20%;
-  padding: 25px;
-  border-radius: 1.5%;
-  margin-bottom: 50px;
+  @include default;
 
   img{
     padding: 5px;
@@ -17,7 +12,6 @@
   
 @media(max-width:768px){
   .article{
-    margin: 50px;
-    border-radius: 0;
+    @include tablet;
   }
 }
