--- a/public/css/gallery.scss
+++ b/public/css/gallery.scss
@@ -1,12 +1,7 @@
 @import "../utilities/varibles";
 
 .gallery{
-  background-color: $primary;
-  margin-left: 20%;
-  margin-right: 20%;
-  padding: 25px;
-  border-radius: 1.5%;
-  margin-bottom: 50px;
+  @include default;
 
   .photo{
     width: 16vw;
@@ -44,8 +39,7 @@
 
 @media(max-width:768px){
   .gallery{
-    margin: 50px;
-    border-radius: 0;
+    @include tablet;
 
     .btn{
       display: none;
