--- a/public/css/archived.scss
+++ b/public/css/archived.scss
@@ -1,12 +1,7 @@
 @import "../utilities/varibles";
 
 .archived{
-  background-color: $primary;
-  margin-left: 20%;
-  margin-right: 20%;
-  padding: 25px;
-  border-radius: 1.5%;
-  margin-bottom: 50px;
+  @include default;
 
   li{
     padding: 8px;
@@ -23,7 +18,6 @@
 
 @media(max-width:768px){
   .archived{
-    margin: 50px;
-    border-radius: 0;
+    @include tablet;
   }
 }
