--- a/public/css/song.scss
+++ b/public/css/song.scss
@@ -1,12 +1,7 @@
 @import "../utilities/varibles";
 
 .song{
-  background-color: $primary;
-  margin-left: 20%;
-  margin-right: 20%;
-  padding: 25px;
-  border-radius: 1.5%;
-  margin-bottom: 50px;
+  @include default;
 
   iframe{
     padding: 5px;
@@ -18,8 +13,7 @@
 
 @media(max-width:768px){
   .song{
-    margin: 50px;
-    border-radius: 0;
+    @include tablet;
     iframe{
       width: 100%;
       height: 300px;
