--- a/public/css/article.scss
+++ b/public/css/article.scss
@@ -8,6 +8,10 @@
     background-color: $secondary;
     border-radius: 5%;
   }
+
+  .special_underline{
+    text-decoration: underline $accent2;
+  }
 }
   
 @media(max-width:768px){
