--- a/public/css/wallpaper.scss
+++ b/public/css/wallpaper.scss
@@ -1,56 +1,56 @@
-@import "../utilities/varibles";
+@import '../utilities/varibles';
 
-.w_gallery{
-  @include default;
+.w_gallery {
+    @include default;
 
-  .photo{
-    width: 28vw;
-    display: inline-block;
-  }
+    .photo {
+        width: 28vw;
+        display: inline-block;
+    }
 
-  .btn{
-    display: block;
-    background-color: $accent1;
-    padding: 5px;
-    border-radius: 5%;
-    width: 110px;
-    margin-left: 3px;
-  }
-  .btn:hover{
-    transform: scale(1.1);
-    transition: 0.4s;
-  }
+    .btn {
+        display: block;
+        background-color: $accent1;
+        padding: 5px;
+        border-radius: 5%;
+        width: 110px;
+        margin-left: 3px;
+    }
+    .btn:hover {
+        transform: scale(1.1);
+        transition: 0.4s;
+    }
 
-  img{
-    aspect-ratio: 16/9;
-    width: 27vw;
-    padding: 5px;
-    background-color: $secondary;
-    border-radius: 3%;
-    margin: 3px;
-  }
-  img:hover{
-    transform: scale(1.5);
-    transition: 0.4s;
-  }
+    img {
+        aspect-ratio: 16/9;
+        width: 27vw;
+        padding: 5px;
+        background-color: $secondary;
+        border-radius: 3%;
+        margin: 3px;
+    }
+    img:hover {
+        transform: scale(1.5);
+        transition: 0.4s;
+    }
 }
 
-@media(max-width:768px){
-  .w_gallery{
-    @include tablet;
+@media (max-width: 768px) {
+    .w_gallery {
+        @include tablet;
 
-    .btn{
-      display: none;
-    }
+        .btn {
+            display: none;
+        }
 
-    .photo{
-      width: 80%;
-      margin-left: 10%;
-      margin-right: 10%;
-    }
+        .photo {
+            width: 80%;
+            margin-left: 10%;
+            margin-right: 10%;
+        }
 
-    img{
-      width: 100%;
+        img {
+            width: 100%;
+        }
     }
-  }
 }
