--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,35 +1,35 @@
-@import "../public/utilities/varibles";
+@import '../public/utilities/varibles';
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Nothing You Could Do', cursive;
-  font-size: large;
-  letter-spacing: 1.5px;
-  background-color: $background;
-  color:white;
+    padding: 0;
+    margin: 0;
+    font-family: 'Nothing You Could Do', cursive;
+    font-size: large;
+    letter-spacing: 1.5px;
+    background-color: $background;
+    color: white;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
-h1{
-  text-transform: capitalize;
+h1 {
+    text-transform: capitalize;
 }
-h2{
-  text-transform: capitalize;
+h2 {
+    text-transform: capitalize;
 }
 
-.firstW{
-  text-transform: uppercase;
-  text-decoration: underline $accent2;
-  padding: 3px;
-  border-radius: 20%;
+.firstW {
+    text-transform: uppercase;
+    text-decoration: underline $accent2;
+    padding: 3px;
+    border-radius: 20%;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
