--- a/public/css/wallpaper.scss
+++ b/public/css/wallpaper.scss
@@ -10,7 +10,7 @@
 
     .btn {
         display: block;
-        background-color: $accent1;
+        background-color: $button;
         padding: 5px;
         border-radius: 5%;
         width: 110px;
