--- a/public/css/archived.scss
+++ b/public/css/archived.scss
@@ -8,6 +8,10 @@
     padding: 8px;
   }
   
+ul{
+  list-style-type: none;
+}
+
   a:hover {
     background-color: $accent1;
     transform: scale(1.1);
