--- a/public/css/navbar.module.scss
+++ b/public/css/navbar.module.scss
@@ -4,10 +4,8 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 125px;
+    width: auto;
     background: linear-gradient(to bottom right, $accent1, 10%, $background);
-    border-top-right-radius: 50%;
-    border-bottom-right-radius: 50%;
 
     ul {
         list-style-type: none;
