--- a/public/utilities/_varibles.scss
+++ b/public/utilities/_varibles.scss
@@ -14,6 +14,12 @@ $button: #1b4645;
     margin-right: 25px;
 }
 
+@mixin mobile {
+    margin-right: 0px;
+    margin-left: 0px;
+    margin-top: 100px;
+}
+
 @mixin default {
     background-color: $primary;
     margin-left: 20%;
@@ -22,7 +28,6 @@ $button: #1b4645;
     border-radius: 1.5%;
     margin-top: 50px;
 }
-
 /*
 possiable new one?
 $background: #000000;
